# okiro

./: Cargo.toml  LICENSE  README.md
src/: cli.rs  main.rs
